# MakeWiki

./: .gitignore  README.md  SPDK_WIKI_CURRENT_QUALITY_REPORT.md  SPDK_WIKI_EVALUATION_FOR_CLAUDE.md  SPDK_WIKI_LLM_QUALITY_REPORT.md  SPDK_WIKI_QUALITY_REPORT.md  plan.md  pyproject.toml
makewiki/: __init__.py  cli.py  errors.py
makewiki/analysis/: __init__.py  base.py  docs.py  external.py  fixture.py  structs.py
makewiki/config/: __init__.py  loader.py  model.py
makewiki/graph/: __init__.py  facts.py  model.py  store.py  traversal.py
makewiki/llm/: __init__.py  base.py  openrouter.py
makewiki/qa/: __init__.py  engine.py  model.py
makewiki/render/: __init__.py  mermaid.py
makewiki/wiki/: __init__.py  evaluate.py  generator.py  html.py  source.py  validator.py
tests/: test_analyze_render.py  test_build.py  test_cli.py  test_config.py  test_docs.py  test_evaluate.py  test_facts.py  test_facts_store.py  test_graph.py  test_html.py  test_joern_facts.py  test_llm.py  test_qa.py  test_source_snippet.py  test_structs.py  test_wiki.py
tests/fixtures/bad_config/.makewiki/: config.json
tests/fixtures/no_build/.makewiki/: config.json
tests/fixtures/tiny_c/: main.c  worker.c  worker.h
tests/fixtures/tiny_c/.makewiki/: config.json
